style.css
body {
    font-family: Arial, sans-serif;
    text-align: center;
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  
  header {
    padding: 1rem;
    margin: 0 auto;
    max-width: 800px;
    flex-direction: column;
  }
  
  h1 {
    font-size: 3rem;
    margin-bottom: 2rem;
  }

  main {
    width: 800px;
  }
  
  form {
    display: flex;
    align-items: center;
    background-color: #f2f2f2;
    padding: 2rem;
    border-radius: 5px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    margin: 0 auto;
  }
  
  input[type="text"] {
    padding: 1rem;
    border-radius: 5px;
    border: 1px solid #ccc;
    flex-grow: 1;
    width: 60%;
    margin-right: 1rem;
  }
  
  button[type="submit"] {
    background-color: #4CAF50;
    color: white;
    padding: 1rem 2rem;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1.2rem;
  }
  
  main {
    display: block;
  }
  
  .container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
  }
  
  footer {
    text-align: center;
    padding: 1rem;
  }

  .cards {
   display: flex;
   justify-content: space-evenly;
   border-style: groove;
   border-color: black;
   background: navy;
   padding: 2%;
   border-radius: 5px;
}

.card {
  border-style: ridge;
  border-color: #ff3def;
  background: white;
  padding: 2%;
  border-radius: 5px;
}

